egonlang-core/res/examples/invalid/prefix_expr_bang_on_list_expr.eg
![];
![1, 2, 3];

// out: TypeError: mismatched types: expected type `bool` but received `list<unknown>`
// out: TypeError: mismatched types: expected type `bool` but received `list<number>`